--- a/index.html
+++ b/index.html
@@ -20,8 +20,25 @@
 				<div class="correct-counter">3</div>
 			</div>
 		</div>
-		<div class="column center-column"><img src="images/pecs.jpg"></div>
-		<div class="column right-column">right</div>
+		<div class="column center-column">
+			<img src="images/lats.jpg">
+		</div>
+		<div class="column right-column">
+			<div class="question-box">
+				<div class="question">What is this muscle called?</div>
+				<div class="possible-answers">
+					<form>
+						<input class="answer-item" type="radio" name="option1" value="biceps brachii" checked /> biceps brachii</br>
+						<input class="answer-item" type="radio" name="option2" value="deltoid" /> deltoid</br>
+						<input class="answer-item" type="radio" name="option3" value="triceps" /> triceps brachii</br>
+						<input class="answer-item" type="radio" name="option4" value="latissimus dorsi" /> latissimus dorsi</br>
+						<div class="input-button">
+							<input type="submit" value="submit"> 
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 <footer></footer>
