objects and array created

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Muscular Anatomy Quiz</title>
+	<link rel="stylesheet" href="styles/normalize.css"/>
 	<link rel="stylesheet" href="styles/style.css"/>
+	<script type="text/javascript" src="javascript/jquery.min.js"></script>
+	<script type="text/javascript" src="javascript/math.min.js"></script>
+	<script type="text/javascript" src="javascript/app.js"></script>
 </head>
 <header>
 	<h1 class="quiz-title">Muscular Anatomy Quiz</h1>
