mapping to dom figured out

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 				<div class="question">What is this muscle called?</div>
 				<div class="possible-answers">
 					<form>
-						<input class="answer-item" type="radio" name="option1" value="biceps brachii" checked /> biceps brachii</br>
-						<input class="answer-item" type="radio" name="option2" value="deltoid" /> deltoid</br>
-						<input class="answer-item" type="radio" name="option3" value="triceps" /> triceps brachii</br>
-						<input class="answer-item" type="radio" name="option4" value="latissimus dorsi" /> latissimus dorsi</br>
+						<input class="answer-item" type="radio" name="option1" id="1" value="" checked /><label for="1"></label></br>
+						<input class="answer-item" type="radio" name="option2" id="2" value="" /><label for="2" ></label></br>
+						<input class="answer-item" type="radio" name="option3" id="3" value="" /><label for="3" ></label></br>
+						<input class="answer-item" type="radio" name="option4" id="4" value="" /><label for="4" ></label></br>
 						<div class="input-button">
 							<input type="submit" value="submit"> 
 						</div>
