starting to functionize

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 			<div class="question-box">
 				<div class="question">What is this muscle called?</div>
 				<div class="possible-answers">
-					<form>
-						<input class="answer-item" type="radio" name="option1" id="1" value="" checked /><label for="1"></label></br>
-						<input class="answer-item" type="radio" name="option2" id="2" value="" /><label for="2" ></label></br>
-						<input class="answer-item" type="radio" name="option3" id="3" value="" /><label for="3" ></label></br>
-						<input class="answer-item" type="radio" name="option4" id="4" value="" /><label for="4" ></label></br>
+					<form id="quiz-form">
+						<input class="answer-item" type="radio" name="option" id="r1" value="" checked /><label for="r1"></label></br>
+						<input class="answer-item" type="radio" name="option" id="r2" value="" /><label for="r2" ></label></br>
+						<input class="answer-item" type="radio" name="option" id="r3" value="" /><label for="r3" ></label></br>
+						<input class="answer-item" type="radio" name="option" id="r4" value="" /><label for="r4" ></label></br>
 						<div class="input-button">
 							<input type="submit" value="submit"> 
 						</div>
