working with rough edges, need score counter

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<div class="column left-column">			
 			<div class="counter-box">
 				<div class="counter-box-title">Question:</div>
-				<div class="counter">3/4</div>
+				<div class="counter">X/X</div>
 			</div>
 			<div class="correct-count-box">
 				<div class="correct-topß-text">Correct answers so far:</div>
-				<div class="correct-counter">3</div>
+				<div class="correct-counter">X</div>
 			</div>
 		</div>
 		<div class="column center-column">
-			<img src="images/lats.jpg">
+			<div id="image-box"></div>
 		</div>
 		<div class="column right-column">
 			<div class="question-box">
